# youtube-collector

./: .gitignore  Cargo.toml  README.md  shell.nix  test.sh
src/: error.rs  lib.rs  main.rs  printers.rs  yt_client.rs  yt_error.rs
