[package]
name = "youtube-collector"
version = "0.0.1"
edition = "2021"
authors = ["Oto Brglez <otobrglez@gmail.com>"]
description = "A library to extracttion of statistics from YouTube channels and videos."
license = "MIT"
homepage = "https://github.com/otobrglez/youtube-collector"
repository = "https://github.com/otobrglez/youtube-collector"
publish = false
default-run = "cli"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[features]
# default = ["experimental"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "1.26.0", features = ["full"] }
ureq = { version = "2.6.2", features = ["json"] }
